@@ -4,7 +4,6 @@ import static org.junit.jupiter.api.Assertions.*;
 
 import model.chaosgame.ChaosGameDescription;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import model.mathcore.Complex;
 import model.mathcore.Matrix2x2;
@@ -14,7 +13,7 @@ import org.junit.jupiter.api.Test;
 import model.transformations.AffineTransform2D;
 import model.transformations.Transform2D;
 
-public class ChaosGameDescriptionFactoryTest {
+class ChaosGameDescriptionFactoryTest {
 
 private ChaosGameDescriptionFactory factory;
 private Vector2D minCoordsVector;
@@ -28,7 +27,7 @@ private Vector2D maxCoordsVector;
     }
 
   @Test
-  public void testSierpinski() {
+  void testSierpinski() {
     ChaosGameDescription description = factory.sierpinski(minCoordsVector, maxCoordsVector);
     assertNotNull(description);
 
@@ -43,19 +42,21 @@ private Vector2D maxCoordsVector;
     }
 
     @Test
-    public void testBarnsley() {
+    void testBarnsley() {
       ChaosGameDescription description = factory.barnsley(minCoordsVector, maxCoordsVector);
       assertNotNull(description);
       // Further assertions depend on the behavior of your ChaosGameDescription class
     }
 
     @Test
-    public void testMapleTree(){
-
+    void testMapleTree(){
+      ChaosGameDescription description = factory.mapleTree(minCoordsVector, maxCoordsVector);
+      assertNotNull(description);
+      // Further assertions depend on the behavior of your ChaosGameDescription class
     }
 
     @Test
-    public void testJulia() {
+    void testJulia() {
       Complex c = new Complex(0.285, 0.01);
       ChaosGameDescription description = factory.julia(minCoordsVector, maxCoordsVector, c);
       assertNotNull(description);
@@ -63,11 +64,11 @@ private Vector2D maxCoordsVector;
     }
 
     @Test
-    public void testAffine() {
+    void testAffine() {
       Matrix2x2 matrix = new Matrix2x2(1, 2, 3, 4);
       Vector2D vector = new Vector2D(5, 6);
-      List<Matrix2x2> matrices = Arrays.asList(matrix);
-      List<Vector2D> vectors = Arrays.asList(vector);
+      List<Matrix2x2> matrices = List.of(matrix);
+      List<Vector2D> vectors = List.of(vector);
       ChaosGameDescription description = factory.affine(matrices, vectors, minCoordsVector,
           maxCoordsVector);
       assertNotNull(description);
